# native-qemu

./: .gitattributes  .gitignore  Cargo.toml  README.md  RELEASE_CHECKLIST.md  plan.md
.github/workflows/: build.yml
agent/: Cargo.toml
agent/src/: config.rs  hooks.rs  logging.rs  main.rs  qemu.rs  qmp.rs  services.rs  storage.rs  timezone.rs  usb.rs
assets/image/: README.md  image.7z.001  image.7z.002
examples/: winxp-virtio.toml
overlay/etc/native-qemu/: config.toml.default  config.toml.example  shutdown.sh.example  startup.sh.example
overlay/etc/native-qemu/docs/: configuration.html  index.html
scripts/: build-native-qemu-iso.sh  check-ci-product-shape.sh  write-usb.sh
tools/nq-disk/: Cargo.toml  README.md
tools/nq-disk/src/: blockdev.rs  ext4_io.rs  flash.rs  format_size.rs  main.rs  partition.rs  rawdisk.rs  schema.rs  sized_disk.rs  syncutil.rs  tools.rs  volume.rs  win_lwext4_stubs.rs
tools/nq-disk/src/ui/: editor.rs  mod.rs  wizard.rs
